--- a/faculdade/index.html
+++ b/faculdade/index.html
@@ -6,9 +6,12 @@
     <title>exemplo 3</title>
     <script>
     document.write("Exemplo de texto");
-    let idade=20;
+    let idade=18;
     if (idade==18){
-    document.write("idade igual a 18");
+
+        document.write("idade igual a 18");
+    }else {
+        document.write("A idade não é igual a 18");
     }
     </script>
 </head>
