--- a/faculdade/index.html
+++ b/faculdade/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>exemplo 3</title>
     <script>
-    document.write("Exemplo de texto");
-    let idade=18;
-    if (idade==18){
+        let idade = prompt("Digite sua idade");
+        if (idade == 18) {
 
-        document.write("idade igual a 18");
-    }else {
-        document.write("A idade não é igual a 18");
-    }
+            document.write("idade igual a 18");
+        } else if (idade > 18) {
+            document.write("A idade é maior que 18");
+        } else {
+            document.write("A idade é menor que 18")
+        }
     </script>
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
