utilizando o documnet.write

--- a/cursoemvideo/ex004.html
+++ b/cursoemvideo/ex004.html
@@ -8,4 +8,10 @@
 <body>
     
 </body>
+<script>
+    var nome=window.prompt("Qual é o seu nome?")
+    document.write (`Seu nome tem <strong>${nome.length}</strong> letras.<br/> ` )
+    document.write (`Seu nome  em letras maiusculas ${nome.toLocaleUpperCase()} <br/>`)
+    document.write(`Seu nome em letras minusculas ${nome.toLocaleLowerCase()} <br/>`)
+</script>
 </html>
